--- a/src/components/bodyCheck/bodyCheckIn/bodyCheckIn.html
+++ b/src/components/bodyCheck/bodyCheckIn/bodyCheckIn.html
@@ -29,7 +29,7 @@
           <div class="left-footer">
             <span>腕带编号</span>
             <div>
-              <input type="text" placeholder="请输入">
+              <input type="text" placeholder="请输入" v-model="wristbandNum">
             </div>
           </div>
         </div>
