--- a/src/components/owns/ownFilling/ownFilling.less
+++ b/src/components/owns/ownFilling/ownFilling.less
@@ -319,9 +319,12 @@
     #detectCatch {
       width: 23%;
       height: 134px;
+      top: 0;
       position: absolute;
       left: 9%;
-      top: 2px;
+      border: 1px solid #cde3f6;
+      box-sizing: border-box;
+      background-color: #f2f9ff;
     }
 
     .p-last-line {
