--- a/src/components/drugDetect/detectDetail/detectDetail.html
+++ b/src/components/drugDetect/detectDetail/detectDetail.html
@@ -6,7 +6,7 @@
     <form action="" :model="pinfo" :rules="rules" ref="pinfo" class="person-info">
       <div class="p-first-line">
         <span class="pname">人员姓名</span>
-        <input type="text" id="pname" v-model="pinfo.name" disabled>
+        <input type="text" id="pname" v-model="pinfo.pname" disabled>
         <span class="pnumber">腕带编号</span>
         <input type="text" id="pnumber" v-model="pinfo.pnumber" disabled>
       </div>
@@ -16,11 +16,11 @@
         <input type="text" id="pexplain" v-model="pinfo.explain" placeholder="请输入">
       </div>
       <div class="sep-line"></div>
-          <!-- 抓拍 -->
+      <!-- 抓拍 -->
       <div class="p-detect-catch-line">
         <span class="pcatchall"><span class="info-tip">*</span>抓　　拍</span>
         <div id="detectCatch">
-          <el-upload action="https://jsonplaceholder.typicode.com/posts/" list-type="picture-card"
+          <!-- <el-upload action="https://jsonplaceholder.typicode.com/posts/" list-type="picture-card"
             :show-file-list="false" ref="upload" :on-success="handleAvatarSuccess">
             <img v-if="imageUrl" :src="imageUrl" class="avatar">
             <div class="upload-btn">
@@ -30,7 +30,16 @@
                 <div class="avatar-uploader-icon">上传</div>
               </div>
             </div>
-          </el-upload>
+          </el-upload> -->
+          <img id="preview" :src="pinfo.pphoto" width=-1 height=-1 style="display:none" />
+          <input type='file' name="imgBox" id="imgBox" @change="setImagePreview" hidden />
+          <div class="upload-btn">
+            <div class="sta-show"></div>
+            <div class="hover-show">
+              <div @click.self="catchPhoto">抓拍</div>
+              <div class="uploadImg" id="uploadImg" @click="uploadImg">上传</div>
+            </div>
+          </div>
           <div class="delete-img" @click.self="deleteUploadImg('#detectCatch')"></div>
         </div>
       </div>
