--- a/src/components/drugDetect/detectDetail/detectDetail.less
+++ b/src/components/drugDetect/detectDetail/detectDetail.less
@@ -97,6 +97,9 @@
         top: 0;
         position: absolute;
         left: 9%;
+        border: 1px solid #cde3f6;
+        box-sizing: border-box;
+        background-color: #f2f9ff;
       }
     }
 
@@ -147,7 +150,7 @@
       background-color: #457EFB;
       // background-image: linear-gradient(#457EFB, #457EFB);#4c84ff
       color: #fff;
-      box-shadow:4px 4px 8px #4c84ff;
+      box-shadow: 4px 4px 8px #4c84ff;
     }
 
     &.btn-reset,
@@ -155,7 +158,7 @@
       background-color: #fff;
       // border: 4px solid #dfe2e9;
       line-height: 36px;
-      box-shadow:4px 4px 8px #c9c0d4;
+      box-shadow: 4px 4px 8px #c9c0d4;
     }
 
     &.btn-skip {
