--- a/src/components/main/main.html
+++ b/src/components/main/main.html
@@ -1,14 +1,11 @@
 <div id="detectCatch">
-  <el-upload action="https://jsonplaceholder.typicode.com/posts/" list-type="picture-card" :show-file-list="false"
-    ref="upload" :on-success="handleAvatarSuccess" :on-preview="handlePreview"
-    :on-remove="handleRemove">
-    <img v-if="imageUrl" :src="imageUrl" class="avatar">
-  </el-upload>
+  <img id="preview" width=-1 height=-1 style="display:none" />
+  <input type='file' name="imgBox" id="imgBox" @change="setImagePreview" hidden />
   <div class="upload-btn">
     <div class="sta-show"></div>
     <div class="hover-show">
       <div @click.self="catchPhoto">抓拍</div>
-      <div class="avatar-uploader-icon" slot="trigger" @click.self="submitUpload">上传</div>
+      <div class="uploadImg" id="uploadImg" @click="uploadImg">上传</div>
     </div>
   </div>
   <div class="delete-img" @click.self="deleteUploadImg('#detectCatch')"></div>
