--- a/src/components/owns/ownFilling/ownFilling.css
+++ b/src/components/owns/ownFilling/ownFilling.css
@@ -308,9 +308,12 @@
 .ownfilling-main .person-info #detectCatch {
   width: 23%;
   height: 134px;
+  top: 0;
   position: absolute;
   left: 9%;
-  top: 2px;
+  border: 1px solid #cde3f6;
+  box-sizing: border-box;
+  background-color: #f2f9ff;
 }
 .ownfilling-main .person-info .p-last-line {
   height: 134px;
