--- a/src/components/propertyRe/propertyDetail/propertyDetail.css
+++ b/src/components/propertyRe/propertyDetail/propertyDetail.css
@@ -190,6 +190,9 @@
   top: 0;
   position: absolute;
   left: 9%;
+  border: 1px solid #cde3f6;
+  box-sizing: border-box;
+  background-color: #f2f9ff;
 }
 .ownfilling-main .person-info input::-webkit-input-placeholder {
   /* WebKit browsers */
