--- a/src/components/propertyRe/propertyDetail/propertyDetail.less
+++ b/src/components/propertyRe/propertyDetail/propertyDetail.less
@@ -20,7 +20,7 @@
   // width: 100%;
   width: 100%;
   height: 422px;
-  height:  100%;
+  height: 100%;
   display: block;
   position: relative;
   padding-left: 8%;
@@ -32,14 +32,14 @@
     .p-first-line,
     .p-second-line,
     .p-third-line,
-    .p-catch-line{
+    .p-catch-line {
       width: 100%;
       height: 40px;
       line-height: 40px;
       position: relative;
       font-size: 14px;
 
-   
+
       span {
         width: 56px;
         position: absolute;
@@ -126,7 +126,8 @@
         left: 1%;
       }
 
-      #pname,#psavebox {
+      #pname,
+      #psavebox {
         left: 9%;
         background-color: #f5f6fa;
       }
@@ -176,6 +177,9 @@
       top: 0;
       position: absolute;
       left: 9%;
+      border: 1px solid #cde3f6;
+      box-sizing: border-box;
+      background-color: #f2f9ff;
     }
 
     input::-webkit-input-placeholder {
