--- a/static/theme/basic/dark.css
+++ b/static/theme/basic/dark.css
@@ -1,20 +1,21 @@
-.common-head .head-top {
+.header {
   background: linear-gradient(to right, #536cf5, #507ffc);
   filter: progid:DXImageTransform.Microsoft.gradient(GradientType=1, startColorstr=#536cf5, endColorstr=#507ffc);
 }
 
-.common-head .head-nav {
+.headnav {
   background: linear-gradient(to right, #293797, #3745b1);
   filter: progid:DXImageTransform.Microsoft.gradient(GradientType=1, startColorstr=#293797, endColorstr=#3745b1);
 }
 
-.common-head .head-nav .nav-list>li>a:hover {
+.headnav .nav-list>li>a:hover {
   background-color: #3e53d3;
 }
 
-.common-head .head-nav .nav-list>li.currentHeadNav>a {
+.headnav .nav-list>li.currentHeadNav>a {
   background-color: #3e53d3;
 }
+
 
 .ban_show .ban_aside {
   background-color: #242839;
