--- a/static/theme/orange/light.css
+++ b/static/theme/orange/light.css
@@ -1,18 +1,18 @@
-.common-head .head-top {
+.header {
   background: linear-gradient(to right, #ee8723 , #ec7627);
   filter: progid:DXImageTransform.Microsoft.gradient(GradientType=1, startColorstr=#ee8723, endColorstr=#ec7627);
 }
 
-.common-head .head-nav {
+.headnav {
   background: linear-gradient(to right, #a14f17 , #bf611e);
   filter: progid:DXImageTransform.Microsoft.gradient(GradientType=1, startColorstr=#a14f17, endColorstr=#bf611e);
 }
 
-.common-head .head-nav .nav-list>li>a:hover {
+.headnav .nav-list>li>a:hover {
   background-color: #dd712c;
 }
 
-.common-head .head-nav .nav-list>li.currentHeadNav>a {
+.headnav .nav-list>li.currentHeadNav>a {
   background-color: #dd712c;
 }
 
